# kyc-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  email_service.py  kyc_agent.py  kyc_service.py  manifest-kyc-agent.yml  postman-bundle-local.json  postman-bundle.json  pyproject.toml  requirements.txt
docs/: dilisense.txt  id-check.txt  openai-documentation.md  openai-reasoning.md  opensanctions.txt  watchman.txt
templates/: index.html  status.html
