[project]
name = "kyc-agent"
version = "0.1.0"
description = "Automated KYC processing service with document analysis and risk assessment"
authors = [
    {name = "mssaleh",email = "mssaleh@live.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "openai (>=1.61.0,<2.0.0)",
    "aiohttp (>=3.11.11,<4.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "fpdf (>=1.7.2,<1.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
